# VisionSoilAnalyzer

./: .directory  .gitignore  .gitmodules  README.md  index.html  params.json
.tmsu/: db
3Dmodel/: Bottom.prt  Lasercutter.prt  MicroscopeLab_asm.prt  Side.prt  dummyMicroscope.prt
3Dmodel/Gaara/: 180xLens.prt  Arm.prt  Bridge.prt  DFK24UJ003.prt  Gaara.prt  Holder.prt  Lid.prt  LidFrame.prt  LightRoom.prt  LightroomLid.prt  Luxeon-Rebel.prt  Luxeon.prt  Microscope.prt  SamplePlate.prt  Slider.prt  Stop.prt  TopBodyCase.prt  Tube.prt  bigNop.prt  body.prt
3Dmodel/Revision 1/: Lasercutter.dxf  Lasercuttercolered.bak  Lasercuttercolered.dxf  Top.prt
3Dmodel/Revision 2/: 180xLens.prt  BBB.prt  BEAGLEBONE_BLACK.IGS  BaseCase.prt  Bottom.prt  BottomCase.prt  BottomPart.prt  CameraHolder_DNT.prt  CameraHolder_DNT.tif  Camera_DNT.prt  Case.prt  Case_1.tif  Gaara.prt  Lid.prt  Lid.tif  LightCase.prt  LightRoom.tif  Plate.prt  SamplePlate.prt  SamplePlateLid.tif  SampleRoom.tif  Sampleplate.tif  TopLid.prt
BeagleBone Black/DeviceTreeOverlay/: bspwm_P8_13_14-00A0.dts  bspwm_P8_19_14-00A0.dts  bspwm_P9_14_16-00A0.dts  bspwm_P9_16_16-00A0.dts
Documentation/Copyright/: addlicense.sh  batchcopyright.sh  license.txt
Documentation/Correspondentie/: StandardQuastionMarktResearch.odt
Documentation/IHC/: Current Status 150615.docx  Current Status 150617.docx  Soil and computer vision.docx
Documentation/Minor Part 2/: CIELabExtraction.tex  FFT.cpp  GA.cpp  GUI.tex  ImageProcessing_acquisition.tex  ImageProcessing_enhancement.tex  ImageProcessing_featureextraction.tex  Introduction.tex  LEDDriver.tex  NN.cpp  NN.h  NeuralNetwork.tex  ParticleSizeDistribution.tex  ProductDocumentation.aux  ProductDocumentation.blg  ProductDocumentation.out  ProductDocumentation.tex  ProductDocumentation.toc  RDM_projectpropesition.tex  RE.tex  Realisation_main.tex  SDE.tex  Specifications.tex  Specifications.tex.aux  Stats.h  Summary.tex  SystemDescription.tex  bibliography.bib  functionalDesign.tex  main-blx.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.idx  main.ilg  main.ind  main.ptc  (+6 more)
Documentation/Minor Portfolio/: Disclaimer.md
Doxygen/: Doxyfile  doxygen_sqlite3.db
Doxygen/html/: _a_d_c_8cpp.html  _a_d_c_8cpp.js  _a_d_c_8cpp__incl.map  _a_d_c_8cpp__incl.md5  _a_d_c_8cpp_source.html  _a_d_c_8h.html  _a_d_c_8h.js  _a_d_c_8h__dep__incl.map  _a_d_c_8h__dep__incl.md5  _a_d_c_8h__incl.map  _a_d_c_8h__incl.md5  _a_d_c_8h_source.html  _a_d_c_read_exception_8h.html  _a_d_c_read_exception_8h__dep__incl.map  _a_d_c_read_exception_8h__dep__incl.md5  _a_d_c_read_exception_8h__incl.map  _a_d_c_read_exception_8h__incl.md5  _a_d_c_read_exception_8h_source.html  _analyse_type_8h.html  _analyse_type_8h.js  _analyse_type_8h__dep__incl.map  _analyse_type_8h__dep__incl.md5  _analyse_type_8h_source.html  _analysis_exception_8h.html  _analysis_exception_8h__dep__incl.map  _analysis_exception_8h__dep__incl.md5  _analysis_exception_8h__incl.map  _analysis_exception_8h__incl.md5  _analysis_exception_8h_source.html  _analysis_results_8cpp.html  _analysis_results_8cpp__incl.map  _analysis_results_8cpp__incl.md5  _analysis_results_8cpp_source.html  _b_b_b_8cpp.html  (+4837 more)
Invention Disclosure/: .directory
LinuxScripts/: build.sh  exporttopdf.sh  getwebcamformats.sh  installppa.sh  mountmeta.sh  setmaxwebcam.sh  setupbuilddir.sh  startgstream.sh  tmsuvsamount-start-shutdown.service  unmountmeta.sh
OLD/SoilMath/: CMakeLists.txt  CommonOperations.h  FFT.h  SoilMath.cpp  SoilMath.h  SoilMathTypes.h  Stats.h
Proof-Of-Concept Matlab/: Area.emf  Area2Volume.m  CIELabSoilColorDistribution.m  CIELabSoilColorDistribution_obsolete.m  ConnectEndings.m  DetermineParticleShape.m  GetLabeledImage.m  GetSampleFromCam.m  I.mat  PSD.m  RISoilColorDistribution.m  RemoveBackgroundVectorImage.m  RemoveBorderBlobs.m  SoilAnalyzer.fig  SoilAnalyzer.m  TestScript.m  TestScript_Jelle.m  XYZ2LAB.m  bound2im.m  convert_RGB2XYZ.m  densityPlot2D.m  detEccentricy.m  f.m  frdescp.m  ifrdescp.m  myNeuralNetworkFunction.m  testNN.m
Tests/: Tests.sln
src/: .directory  mainpage.dox
src/Tests/VSA_UT/: CMakeLists.txt  FloatTestMatrix.h  StatisticalComparisonDefinition.h  TestMatrix.h  VSA_UT.cpp  ValgrindTest.sh
src/Tests/VSA_UT/ComparisionPictures/: BlobTest.ppm  CreatetestImage.m  DilatedResult.ppm  FilterImg.ppm  closeResult.ppm  label.ppm  mask.ppm  particle_4.ppm
src/VisionSoilAnalyzer/Hardware/: ADC.cpp  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.user.3.2-pre1  FailedToCreateGPIOPollingThreadException.h  Hardware.h  Hardware.vcxproj  Hardware.vcxproj.filters  Microscope.cpp  Microscope.h  SoilCape.h  eqep.cpp  eqep.h
src/VisionSoilAnalyzer/Hardware/Hardware_build/: CMakeCache.txt  Hardware.cbp  Makefile  cmake_install.cmake
src/VisionSoilAnalyzer/Soil/: AnalysisException.h  AnalysisResults.cpp  AnalysisResults.h  CMakeLists.txt  CMakeLists.txt.old  Mat_archive.h  Particle.cpp  Particle.h  ParticleAnalysisResults.cpp  Sample.cpp  Sample.h  SampleAnalysisResult.cpp  SampleAnalysisResult.h  ShapeClassification.h  Soil.cpp  Soil.h  Soil.vcxproj  Soil.vcxproj.filters  VisionSoil.h  soilsettings.h
src/VisionSoilAnalyzer/Soil/Soil_build/: CMakeCache.txt  Makefile  Soil.cbp  cmake_install.cmake
src/VisionSoilAnalyzer/SoilPlot/: Axis.cpp  Axis.h  Background.cpp  Background.h  CMakeLists.txt  DrawFigure.cpp  DrawFigure.h  Environment.cpp  Environment.h  Graph.cpp  Graph.h  Grid.cpp  Grid.h  Label.cpp  Label.h  Line.cpp  Line.h  SoilPlot.h
src/VisionSoilAnalyzer/SoilPlot/SoilPlot_build/: CMakeCache.txt  Makefile  SoilPlot.cbp  cmake_install.cmake
src/VisionSoilAnalyzer/Vision/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  Conversion.cpp  Conversion.h  Enhance.cpp  Enhance.h  ImageProcessing.cpp  ImageProcessing.h  Makefile  MorphologicalFilter.cpp  MorphologicalFilter.h  Segment.cpp  Segment.h  Vision.cbp  Vision.h  Vision.vcxproj  Vision.vcxproj.filters  VisionDebug.h  cmake_install.cmake
src/VisionSoilAnalyzer/Vision/Vision_build/: CMakeCache.txt  Makefile  Vision.cbp  cmake_install.cmake
(+3046 files in other folders)
