cmake_minimum_required(VERSION 2.7)
project(Soil)
set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_C_COMPILER "clang")
set(CMAKE_CXX_COMPILER "clang++")

set (Soil_VERSION_MAJOR 1)
set (Soil_VERSION_MINOR 0)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

if(CMAKE_BUILD_TYPE STREQUAL "Debug") 
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Debug)
	set(LIB_INSTALL_DIR ${CMAKE_SOURCE_DIR}/Debug)
	set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Debug)
	set(LIBRARIES_FROM_REFERENCES ${CMAKE_SOURCE_DIR}/../Vision/Debug/libVision.so ${CMAKE_SOURCE_DIR}/../SoilMath/Debug/libSoilMath.so)
else()
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Release)
	set(LIB_INSTALL_DIR ${CMAKE_SOURCE_DIR}/Release)
	set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release)
	set(LIBRARIES_FROM_REFERENCES ${CMAKE_SOURCE_DIR}/../Vision/Release/libVision.so ${CMAKE_SOURCE_DIR}/../SoilMath/Release/libSoilMath.so)
endif() 

add_library(Soil SHARED AnalysisResults.cpp Particle.cpp ParticleAnalysisResults.cpp Sample.cpp SampleAnalysisResult.cpp ShapeClassification.cpp Soil.cpp)
target_link_libraries(Soil -L/usr/local/lib -L/usr/lib/x86_64-linux-gnu/ -lopencv_calib3d -lopencv_core -lopencv_features2d -lopencv_imgproc -lopencv_flann -lopencv_highgui -lopencv_imgcodecs -lopencv_ml -lopencv_objdetect -lopencv_photo -lopencv_shape -lopencv_stitching -lopencv_superres -lopencv_ts -lopencv_video -lopencv_videoio -lopencv_videostab -lboost_serialization "${LIBRARIES_FROM_REFERENCES}")
include_directories(/usr/local/include /usr/local/include/opencv /usr/include/boost)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
